# realtek-zephyr-project

./: test.txt
applications/multimode-keyboard/: CMakeLists.txt  prj.conf  rtl8762gn_evb.overlay
applications/multimode-keyboard/inc/: app_task.h  board.h
applications/multimode-keyboard/inc/key/: key_handle.h  keyscan_driver.h
applications/multimode-keyboard/inc/led/: led_driver.h  led_gpio_ctrl_driver.h  led_hw_timer_pwm_driver.h
applications/multimode-keyboard/inc/usb/: usb_handle.h  usb_hid_interface_keyboard.h
applications/multimode-keyboard/src/: app_task.c  main.c
applications/multimode-keyboard/src/key/: key_handle.c  keyscan_driver.c
applications/multimode-keyboard/src/led/: led_driver.c  led_gpio_ctl_driver.c  led_hw_tim_pwm_driver.c
applications/multimode-keyboard/src/usb/: usb_handle.c  usb_hid_interface_keyboard.c
